[package]
name = "llvm_buildbot_monitor"
version = "0.1.0"
authors = ["George Burgess IV <george.burgess.iv@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[profile.release]
opt-level = 2
panic = "abort"

[dependencies]
chrono = "0.4"
clap = "2.33"
failure = "0.1"
git-version = "0.3"
log = { version = "0.4", features = ["release_max_level_info"] }
reqwest = { version = "0.10.0-alpha.2", features = ["gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.7"
simple_logger = "1.3"
# NOTE: There's an unlock_notify feature, too. Use it maybe?
rusqlite = { version = "0.21", features = ["bundled"] }
tokio = { version = "0.2.0-alpha.6", features = ["sync"] }
