[package]
name = "llvm_buildbot_monitor"
version = "0.1.0"
authors = ["George Burgess IV <george.burgess.iv@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[profile.release]
opt-level = 2
panic = "abort"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2.33"
futures = "0.3"
git-version = "0.3"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_info"] }
reqwest = { version = "0.10", features = ["gzip", "json"] }
rusqlite = { version = "0.21", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.8"
simple_logger = "1.3"
tokio = { version = "0.2", features = ["time", "sync"] }
