[package]
name = "calendar_check"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
html2text = "0.13"
log = "0.4.22"
reqwest = "0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
simple_logger = "5"
tokio = { version = "1.42.0", features = ["full"] }
