[package]
name = "llvm_buildbot_monitor"
version = "0.1.0"
authors = ["George Burgess IV <george.burgess.iv@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
calendar_check = { path = "../calendar_check" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
git-version = "0.3"
hyper = "0.14"
lazy_static = "1"
log = { version = "0.4", features = ["release_max_level_info"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "http", "utils", "rustls_backend"] }
simple_logger = "5"
tokio = { version = "1", features = ["full"] }
